[package]
name = "oscar-statistics"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Ortiz Suarez <pedro@commoncrawl.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
walkdir = "2.5.0"
zstd = "0.13.0"
