[package]
name = "oscar-statistics"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Ortiz Suarez <pedro@commoncrawl.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecount = "0.6.7"
clap = { version = "4.5.3", features = ["derive"] }
oscar-io = "0.4.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
walkdir = "2.5.0"
zstd = "0.13.0"
