[package]
name = "oscar-statistics"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Ortiz Suarez <pedro@commoncrawl.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "52.2.0"
clap = { version = "4.5.14", features = ["derive"] }
parquet = "52.2.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
walkdir = "2.5.0"
zstd = "0.13.2"
